@@ -1,3 +1,10 @@
+2011-11-09  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* spam.el: Move BBDB autoloads.
+	(spam-exists-in-BBDB-p): New function to do the BBDB search directly in BBDB 2 and 3.
+	(spam-check-BBDB): Use it.
+	(spam-enter-ham-BBDB): Use it.
+
 2011-10-31  Peter Münster  <pmrb@free.fr>  (tiny change)
 
 	* gnus-group.el (gnus-group-get-new-news): New parameter `one-level'
